# ResearchOYL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_ryott.cpp  run.sh
generarl-functions/: example_2dim.cpp  grid_class.cpp  grid_class.hpp  output_class.hpp  printdata_class.hpp  seo_class.cpp  seo_class.hpp  simulation.hpp  test_grid_class.cpp  test_seo_class.cpp  test_simulation_class.cpp
include/: grid_2dim.hpp  grid_class.hpp  output_class.hpp  oyl_video.hpp  seo_class.hpp  simulation_2d.hpp
oyl-utils/: example_main.cpp  oyl_video.cpp  test_grid_class.cpp
src/: oyl_video.cpp  seo_class.cpp
test/: grid_2dim_seo_test.cpp  test_seo_class.cpp  test_simulation2d_output.cpp
